@@ -1,7 +1,7 @@
 /*
  * DO NOT ALTER OR REMOVE COPYRIGHT NOTICES OR THIS HEADER.
  *
- * Copyright (c) 2009-2014 Oracle and/or its affiliates. All rights reserved.
+ * Copyright (c) 2009-2016 Oracle and/or its affiliates. All rights reserved.
  *
  * The contents of this file are subject to the terms of either the GNU
  * General Public License Version 2 only ("GPL") or the Common Development
@@ -48,6 +48,7 @@ import java.net.Socket;
 import java.net.SocketException;
 import java.util.logging.Logger;
 import java.util.logging.Level;
+import javax.net.ssl.SSLException;
 
 /**
  * Handle protocol connection.
@@ -113,6 +114,8 @@ public abstract class ProtocolHandler implements Runnable, Cloneable {
             //clientSocket.close();
 	} catch (SocketException sex) {
 	    // ignore it, often get "connection reset" when client closes
+	} catch (SSLException sex) {
+	    // ignore it, often occurs when testing SSL
         } catch (Exception e) {
             LOGGER.log(Level.SEVERE, "Error", e);
         } finally {
